# dicoimpro

./: .gitignore  README.md  data_manifest.yaml  pyproject.toml
.dicoimpro/: .gitignore  COACH_GUIDANCE.md  STAGE_OUTPUT_SCHEMA.md  WORKFLOW_AUTONOMY_POLICY.example.json  WORKFLOW_STATE.example.json
docs/: AGENT_ARCHITECTURE_RESPONSIBILITY_MAP_v0.2.3-auto.md  ARCHITECTURE_SDK_v0.2.3-auto.md  AUDIT_CONCEPTION_AVANT_CODEX_v0.2.3-auto.md  AUDIT_METIER_POST_COACH_LOOP_v0.2.3-auto.md  CHECKLIST_VALIDATION_AVANT_CODEX_v0.2.3-auto.md  CLI_DRY_RUN_USAGE.md  COACH_LOOP_FINAL_AUDIT_FREEZE_v0.2.3-auto.md  CONTRATS_JSON_v0.2.3-auto.md  DECISIONS_AVANT_PROTOTYPAGE.md  FEUILLE_ROUTE_IMPLEMENTATION_SDK_v0.2.3-auto.md  MISSIONS_CODEX_v0.2.3-auto.md  PLAN_ARCHITECTURE_SDK_DICO_IMPRO_v0.2.3-auto.md  PRE_PROMPT_BLOCKERS_CLARIFICATION_v0.2.3-auto.md  PROMPT_ACTIVATION_PROTOCOL_v0.2.3-auto.md  PROMPT_CODEX_001_CONTRATS_PYDANTIC.md  PROMPT_CODEX_002_AGENT_REGISTRY_FAKE_ADAPTER.md  PROMPT_CODEX_002_AGENT_REGISTRY_FAKE_ADAPTER_ASCII.txt  PROMPT_CODEX_002_AGENT_REGISTRY_FAKE_ADAPTER_CLEAN.txt  README.md  REGISTRE_DECISIONS_CONSOLIDEES_v0.2.3-auto.md  REGLES_VALIDATION_v0.2.3-auto.md  REVUE_ARCHITECTURE_POST_015_v0.2.3-auto.md  ROUTING_AGENT_DISABLED_PROMPT_DRAFT_ACCESS_BOUNDARY_v0.2.3-auto.md  ROUTING_AGENT_FUNCTIONAL_SPEC_v0.2.3-auto.md  ROUTING_AGENT_PROMPT_DRAFT_REVIEW_GATE_v0.2.3-auto.md  ROUTING_AGENT_PROMPT_READINESS_CHECKLIST_v0.2.3-auto.md  ROUTING_AGENT_STATIC_CANDIDATE_OUTPUT_COMPARATOR_v0.2.3-auto.md  ROUTING_AGENT_STATIC_EXPECTED_OUTPUT_EVALUATOR_v0.2.3-auto.md  (+15 more)
(+117 files in other folders)
