[project]
name = "dicoimpro"
version = "0.1.0"
description = "Pipeline v0.2.3-auto pour le projet dico impro"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "openpyxl>=3.1.0",
  "pandas>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
